--- a/public/Home/style.css
+++ b/public/Home/style.css
@@ -168,126 +168,60 @@
   border: 1px solid #000;
 }
 
-/*------- Big Card Section Starts Here -----------*/
-
-.big-card {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin: 50px 30px 0 30px;
-}
-
-.big-card img {
-  width: 400px;
-}
-
-.card-content {
-  width: 500px;
-  margin-left: 30px;
-  text-align: center;
-}
-
-.card-content h1 {
-  font-size: 36px;
-  font-weight: 300;
-  margin: 10px 0 10px 0;
-}
-
-.card-content p {
-  font-size: 17px;
-}
-
-/*------- Phone Section Starts Here -----------*/
-
-.phone {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 30px;
-  background-color: rgb(104, 104, 255);
-  color: #fff;
-  padding: 30px;
-  /* margin-bottom: 40px; */
-}
-
-.phone img {
-  width: 400px;
-  /* border-radius: 5px; */
-}
-
-.phone-content {
-  width: 600px;
-}
-
-.phone-content h1 {
-  font-size: 30px;
-  font-weight: 400;
-  margin-bottom: 20px;
-}
-
-
-.phone-content p {
-  font-size: 17px;
-  width: 500px;
-}
-
-.testimonials {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* background-color: aquamarine; */
+.card-big{
   width: 100%;
   height: 100vh;
-}
-
-.testimonials img {
-  width: 600px;
-}
-
-.courses-offer {
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+}
+.card {
+  position: relative;
+  width: 300px;
+  height: 200px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5);
+  transition: 0.3s;
+  padding: 30px 50px;
+  background: #fff;
+  cursor: pointer;
+  margin-right: 30px;
+}
+
+.card:hover {
+  height: 320px;
+}
+
+.imgbox {
+  position: relative;
   width: 100%;
+  height: 100%;
+  transform: translateY(-80px);
+  z-index: 99;
 }
 
-.courses-offer .course {
-  width: 350px;
-  /* border-style: ; */
-  border: 2px  rgb(104, 104, 255);
-  border-style: dashed;
-  padding: 30px 20px;
-  margin: 20px;
+img {
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.5);
+}
+
+.content {
+  padding: 10px 20px;
   text-align: center;
+  transform: translateY(-450px);
+  opacity: 0;
+  transition: 0.3s;
 }
 
-.heading {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-weight: 700;
-  font-size: 40px;
-  margin-top: 40px;
+.card:hover > .content {
+  opacity: 1;
+  transform: translateY(-180px);
 }
 
-.course h1 {
-  font-size: 30px;
-  font-weight: 500;
+.content h2 {
+  color: #7f9ead;
 }
 
-.course p {
-  font-size: 14px;
-}
-
-.course button {
-  padding: 10px 30px;
-  border: 1px solid #6868ff;
-  background-color: transparent;
-  color:#6868ff;
-  border-radius: 20px;
-}
 
 .testimonials .inner {
   display: flex;
@@ -296,8 +230,8 @@
   padding: 40px;
 }
 
-.crousal-card img {
-  width: 400px;
+.inner  img {
+  width: 600px;
 }
 
 .testimonial {
