--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,7 @@ body {
     align-items: center !important;
     justify-content: space-around !important;
     padding: 10px 90px !important;
-    background-color: rgb(104, 104, 255) !important;
+    background-color: #6868ff !important;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4) !important;
     z-index: 1 !important;
     top: 0 !important;
