--- a/public/Admin Panel/style.css
+++ b/public/Admin Panel/style.css
@@ -28,7 +28,8 @@
     color: #fff;
 }
 
-.sidebar-band span ,i{
+.sidebar-band span,
+i {
     display: inline-block;
     padding-right: 1rem;
 }
@@ -191,20 +192,6 @@ main {
     color: #35339a;
 }
 
-/*
-.card-single div:first-child span{
-    color: #9e9e9e;
-}
-.card-single:last-child{
-    background-color: #35339a;
-    color: #fff;
-}
-.card-single:last-child div:last-child span{ 
-    color: #fff;
-} */
-/* .card-single:last-child div:first-child span{
-    color: #fff;
-} */
 table {
     border-collapse: collapse;
 }
@@ -266,12 +253,13 @@ td {
     flex-direction: column;
 }
 
-tr td input{
+tr td input {
     border: none;
     outline: none;
     font-size: 14px;
     width: 100%;
 }
+
 /* .username{
     width: 70px;
 }
@@ -284,9 +272,12 @@ tr td input{
 
 form {
     display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
     flex-direction: column;
 }
-.buttons{
+
+.buttons {
     background-color: transparent;
     border: 0;
     outline: none;
@@ -295,7 +286,8 @@ form {
     color: #c40000;
     margin-left: 20px;
 }
-.buttons-blue{
+
+.buttons-blue {
     background-color: transparent;
     border: 0;
     outline: none;
@@ -304,7 +296,35 @@ form {
     color: #35339a;
     margin-left: 20px;
 }
-a{
+
+a {
     text-decoration: none;
     color: #000;
+}
+
+.inputBox {
+    padding: 10px 30px;
+    width: 500px;
+    resize: none;
+    border-radius: 4px;
+    border: 1px solid #35339a;
+    margin-bottom: 20px;
+}
+
+.inputBox::placeholder{
+    color: #35339a;
+}
+.button{
+    padding: 10px 30px;
+    border: 1px solid #fff;
+    background-color: #35339a;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 6px;
+    transition: 0.3s;
+}
+.button:hover{
+    border: 1px solid #35339a;
+    background-color: transparent;
+    color: #35339a;
 }
