--- a/public/Home/style.css
+++ b/public/Home/style.css
@@ -1081,7 +1081,7 @@ footer .wave#wave4 {
 
 @media (max-width : 360px) {
   .nav {
-    width: 320px !important;
+    width: 360px !important;
     height: 72px;
   }
 
@@ -1095,6 +1095,7 @@ footer .wave#wave4 {
 
   .nav .logo h1 i {
     margin-left: 20px;
+    display: block;
   }
 
   .menu {
@@ -1283,7 +1284,7 @@ footer .wave#wave4 {
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 271vh;
+    height: 302vh;
     flex-direction: column;
   }
 
