--- a/public/Home/style.css
+++ b/public/Home/style.css
@@ -631,13 +631,13 @@ nav .logo h2 {
 }
 
 #active:hover {
-  transform: scale(100%);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.356);
+  transform: translateY(-10px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.153);
 }
 
 .pricing:hover {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.301);
-  transform: scale(110%);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.142);
+  transform: scale(90%);
 }
 
 /* Testimonial Section Starts Here */
@@ -957,131 +957,9 @@ nav .logo h2 {
 
 /* Footer Starts Here */
 
-footer {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  background-color: #3586ff;
-  min-height: 200px;
-  padding: 20px 50px;
-  flex-direction: column;
-  margin-top: 100px;
-}
-
-footer .social-icons,
-footer .footer-menu {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 10px 0 !important;
-  flex-wrap: wrap;
-}
-
-footer .social-icons li,
-footer .footer-menu li {
-  list-style: none;
-}
-
-footer .social-icons li a {
-  font-size: 2em;
-  color: #fff;
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
-  text-decoration: none;
-}
-
-footer .social-icons li a:hover {
-  transform: translateY(-10px);
-}
-
-footer .footer-menu li a {
-  font-size: 1em;
-  color: #fff;
-  margin: 0 10px;
-  display: inline-block;
-  text-decoration: none;
-  opacity: 0.7;
-  transition: 0.2s;
-}
-
-footer .footer-menu li a:hover {
-  opacity: 1;
-}
-
-footer p {
-  color: #fff;
-  text-align: center;
-  margin-top: 15px;
-  margin-bottom: 10px;
-}
-
-footer .wave {
-  position: absolute;
-  top: -100px;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background: url("./images/wave.png");
-  background-size: 1000px 100px;
-}
-
-footer .wave#wave1 {
-  z-index: 1000;
-  opacity: 1;
-  bottom: 0;
-  animation: animateWave 4s linear infinite;
-}
-
-footer .wave#wave2 {
-  z-index: 999;
-  opacity: 0.5;
-  bottom: 10px;
-  animation: animateWave_02 4s linear infinite;
-}
-
-footer .wave#wave3 {
-  z-index: 1000;
-  opacity: 0.2;
-  bottom: 15px;
-  animation: animateWave_03 3s linear infinite;
-}
-
-footer .wave#wave4 {
-  z-index: 999;
-  opacity: 0.7;
-  bottom: 20px;
-  animation: animateWave_04 3s linear infinite;
-}
-
-@keyframes animateWave {
-  0% {
-    background-position-x: 1000px;
-  }
-
-  100% {
-    background-position-x: 0px;
-  }
-
-}
-
-@keyframes animateWave_02 {
-  0% {
-    background-position-x: 0px;
-  }
-
-  100% {
-    background-position-x: 1000px;
-  }
-}
-
-
-@media (max-width : 360px) {
+@media (max-width : 420px) {
   .nav {
-    width: 360px !important;
+    width: 100% !important;
     height: 72px;
   }
 
@@ -1114,7 +992,16 @@ footer .wave#wave4 {
   }
 
   .menu.open-menu {
-    max-width: 400px;
+    max-width: 220px;
+  }
+
+  .nav-links {
+    margin-top: 40px;
+  }
+
+  .buttons {
+    width: 100%;
+    height: 119px;
   }
 
   .menu ul {
@@ -1335,8 +1222,8 @@ footer .wave#wave4 {
     list-style: none;
     font-size: 12px;
   }
-
 }
+
 
 .nav h1 i {
   display: none;
@@ -1349,4 +1236,124 @@ footer .wave#wave4 {
   align-items: center;
   min-height: 100vh;
   display: none;
+}
+footer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: #3586ff;
+  min-height: 200px;
+  padding: 20px 50px;
+  flex-direction: column;
+  margin-top: 100px;
+}
+
+footer .social-icons,
+footer .footer-menu {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px 0 !important;
+  flex-wrap: wrap;
+}
+
+footer .social-icons li,
+footer .footer-menu li {
+  list-style: none;
+}
+
+footer .social-icons li a {
+  font-size: 2em;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+  text-decoration: none;
+}
+
+footer .social-icons li a:hover {
+  transform: translateY(-10px);
+}
+
+footer .footer-menu li a {
+  font-size: 1em;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  text-decoration: none;
+  opacity: 0.7;
+  transition: 0.2s;
+}
+
+footer .footer-menu li a:hover {
+  opacity: 1;
+}
+
+footer p {
+  color: #fff;
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+footer .wave {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url("./images/wave.png");
+  background-size: 1000px 100px;
+}
+
+footer .wave#wave1 {
+  z-index: 1000;
+  opacity: 1;
+  bottom: 0;
+  animation: animateWave 4s linear infinite;
+}
+
+footer .wave#wave2 {
+  z-index: 999;
+  opacity: 0.5;
+  bottom: 10px;
+  animation: animateWave_02 4s linear infinite;
+}
+
+footer .wave#wave3 {
+  z-index: 1000;
+  opacity: 0.2;
+  bottom: 15px;
+  animation: animateWave_03 3s linear infinite;
+}
+
+footer .wave#wave4 {
+  z-index: 999;
+  opacity: 0.7;
+  bottom: 20px;
+  animation: animateWave_04 3s linear infinite;
+}
+
+@keyframes animateWave {
+  0% {
+    background-position-x: 1000px;
+  }
+
+  100% {
+    background-position-x: 0px;
+  }
+
+}
+
+@keyframes animateWave_02 {
+  0% {
+    background-position-x: 0px;
+  }
+
+  100% {
+    background-position-x: 1000px;
+  }
 }
